--- a/src/components/main/MainFrame.css
+++ b/src/components/main/MainFrame.css
@@ -1,7 +1,9 @@
 .main__frame {
-    width: 900px;
+    min-width: 320px;
+    max-width: 900px;
+    width: calc(100% - 300px);
     height: 704px;
-    margin: 24px 233px 225px;
+    margin: 24px auto 225px;
     background-color: #FFFFFF;
     position: relative;
     display: flex;
@@ -14,7 +16,6 @@
     flex-direction: row;
     padding-bottom: 24px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-
 }
 
 .main__profile-content{
@@ -31,6 +32,19 @@
     height: 80px;
     border-radius: 100px;
     margin: 25px 0 0 24px;
+    background-color: #D5E4F7;
+}
+
+.main__avatar-initials{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 52px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #212830;
+    margin: 14px 13px 14px 14px;
 }
 
 .main__profile-title{
@@ -40,6 +54,7 @@
     line-height: 26px;
     margin: 0;
     text-align: left;
+    color: black;
 }
 
 .main__profile-links{
@@ -60,7 +75,6 @@
 }
 
 .main__profile-img {
-    /*background-image: url(../images/Vector.png);*/
     width: 13px;
     height: 11.2px;
     border: none;
@@ -75,7 +89,6 @@
     padding: 0;
     width: 400px;
     height: 168px;
-    margin-top: 24px;
     margin-left: 24px;
 }
 
@@ -86,7 +99,7 @@
     line-height: 20px;
     display: flex;
     align-items: center;
-    margin: 0 0 8px 0;
+    margin: 24px 0 8px 0;
 }
 
 .main__information-input {
@@ -94,11 +107,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    width: 396px;
-    height: 40px;
+    width: 374px;
     background: rgba(0, 0, 0, 0.04);
     border: 1px solid rgba(0, 0, 0, 0.16);
     border-radius: 4px;
+    padding: 12px;
 }
 
 .first-input {
@@ -106,22 +119,18 @@
 }
 
 .main__information-input::placeholder {
-    width: 376px;
-    height: 20px;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.48);
-    padding: 12px 0 12px 12px;
 }
 
 .main__button-start {
-    margin: 48px auto auto 24px;
-    justify-content: center;
-    align-items: center;
+    width: 80px;
+    height: 44px;
+    margin: 48px 0 0 0  ;
     padding: 12px 16px;
-
     background: #5558FA;
     border-radius: 4px;
     font-style: normal;
@@ -132,4 +141,46 @@
     border: none;
     cursor: pointer;
     text-decoration: none;
+}
+
+.main__tip{
+    width: 300px;
+    height: 16px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.48);
+}
+
+.border-red {
+    border: 1px solid red;
+}
+
+@media (max-width: 738px) {
+    .main__information-input{
+        width: 240px;
+        margin: 0 1px 0 0;
+    }
+    .main__tip{
+        display: flow;
+    }
+    .main__button-start{
+        margin: 48px 0 0 60px;
+    }
+    .main__information{
+        align-items: stretch;
+        margin: 0 0 0 30px;
+    }
+    .main__profile-container{
+        flex-direction: column;
+    }
+    .main__avatar{
+        margin: 25px 0 0 80px;
+    }
+    .main__profile-content{
+        margin-left: 30px;
+    }
 }
